Pruebas en la imagen del logo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                                     
 					<div id="header" class="container">
 
-						<!-- Logo -->
-                                                        <a href="index.html" ><img src="images/logo.jpg" /></a>
+						<!-- Logo  #FA7A6C -->
+                                                        <a href="index.html" ><img class="redondeado" src="images/logo.jpg" /></a>
 
 
 						<!-- Nav -->
