--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -68,7 +68,7 @@
 												<h2>Behold! This is the <strong>right sidebar</strong> layout<br />
 												with a sidebar on the right!</h2>
 											</header>
-											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
+											<span class="image featured"><img src="imagenes/pic04.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
 											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
@@ -193,7 +193,7 @@
 															<header>
 																<h3><a href="#">Something of note</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
+															<a href="#" class="image left"><img src="imagenes/pic06.jpg" alt="" /></a>
 															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
 															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
 															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
@@ -211,7 +211,7 @@
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
+															<a href="#" class="image left"><img src="imagenes/pic07.jpg" alt="" /></a>
 															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
 															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
 															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
