comienzo de servios e iconos

--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
 					</div>
 				</div>
                             <div><span id="hago" /> </div>
-                            <div id="main-wrapper">
+                            <div id="main-wrapper" >
 					<div id="main" class="container">
                                             		<!-- Content -->
 								<div id="content" class="8u 12u(mobile)">
                                                                             <h2>Mis servicios</h2>
-                                                                            <table>
-                                                                                <tr><td class="icon fa-scissors"> Corte</td><td>Maquillaje</td></tr>
-                                                                                <tr><td>Peinado</td><td>Pedicure</td></tr>
-                                                                                <tr><td>Polish</td><td>Uñas acrilicas</td></tr>
-                                                                                <tr><td>Diseño de color</td><td>Keratina</td></tr>
+                                                                            <table >
+                                                                                <tr class="spac"><td class="spactd "><image src="imagenes/tijera.png"/> Corte</td><td class="spactd"><image src="imagenes/brocha.png"/> Maquillaje</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/cabello.png"/> Peinado</td><td class="spactd"><image src="imagenes/pies.png"/> Pedicure</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/polish.png"/> Polish</td><td class="spactd"><image src="imagenes/una.png"/> Uñas acrilicas</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd">Diseño de color</td><td class="spactd">Keratina</td></tr>
                                                                             </table>
 								</div>
 
@@ -186,7 +186,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Desarrollo: Alfonso Q.</li>
+							<li>Margarita Texón López.</li><li>Por: Alfonso Q.</li>
 						</ul>
 					</div>
 				</div>
