comienzo de servios e iconos, me faltaba el icono del pincel y la keratina

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                                                                 <tr class="spac"><td class="spactd "><image src="imagenes/tijera.png"/> Corte</td><td class="spactd"><image src="imagenes/brocha.png"/> Maquillaje</td></tr>                                                                                
                                                                                 <tr class="spac"><td class="spactd"><image src="imagenes/cabello.png"/> Peinado</td><td class="spactd"><image src="imagenes/pies.png"/> Pedicure</td></tr>                                                                                
                                                                                 <tr class="spac"><td class="spactd"><image src="imagenes/polish.png"/> Polish</td><td class="spactd"><image src="imagenes/una.png"/> Uñas acrilicas</td></tr>                                                                                
-                                                                                <tr class="spac"><td class="spactd">Diseño de color</td><td class="spactd">Keratina</td></tr>
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/pincel.png"/> Diseño de color</td><td class="spactd"><image src="imagenes/kera.png"/> Keratina</td></tr>
                                                                             </table>
 								</div>
 
@@ -159,24 +159,20 @@
 										<div class="6u 12u(mobile)">
 											<ul class="icons">												
 												<li class="icon fa-phone">
-													(296) 109-6331
+                                                                                                    <a>(296) 109-6331</a>
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">maggie_2311@hotmail.com</a>
+                                                                                                    <a>maggie_2311@hotmail.com</a>
 												</li>
-											</ul>
-										</div>
-										<div class="6u 12u(mobile)">
-											<ul class="icons">
 												<li class="icon fa-twitter">
-													<a href="https://twitter.com/2311Maggie">2311Magaggie</a>
-												</li>
+                                                                                                    <a href="https://twitter.com/2311Maggie" target="_blank">@2311Maggie</a>
+                                                                                                </li>
 												<li class="icon fa-instagram">
-													<a href="https://www.instagram.com/maggie_texon/">maggie_texon</a>
-												</li>												
+                                                                                                    <a href="https://www.instagram.com/maggie_texon/" target="_blank">maggie_texon</a>
+                                                                                                </li>												
 												<li class="icon fa-facebook">
-													<a href="https://www.facebook.com/Sal%C3%B3n-de-belleza-Maggie-359191150917562/?hc_ref=SEARCH&fref=nf">Salón de belleza Maggie/</a>
-												</li>
+                                                                                                    <a href="https://www.facebook.com/Sal%C3%B3n-de-belleza-Maggie-359191150917562/?hc_ref=SEARCH&fref=nf" target="_blank">Salón de belleza Maggie</a>
+                                                                                                </li>
 											</ul>
 										</div>
 									</div>
