--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<nav id="nav" >
                                                             
                                                             <div id="img">
-                                                           <img class="redondeado" src="imagenes/logo.jpg" />
+                                                           <img class="redondeado" src="imagenes/logo.png" />
                                                            </div >
                                                             
 								<ul>                             
