cambio de iconos de servicios

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 								<div id="content" class="8u 12u(mobile)">
                                                                             <h2>Mis servicios</h2>
                                                                             <table >
-                                                                                <tr class="spac"><td class="spactd "><image src="imagenes/tijera.png"/> Corte</td><td class="spactd"><image src="imagenes/brocha.png"/> Maquillaje</td></tr>                                                                                
-                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/cabello.png"/> Peinado</td><td class="spactd"><image src="imagenes/pies.png"/> Pedicure</td></tr>                                                                                
-                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/polish.png"/> Polish</td><td class="spactd"><image src="imagenes/una.png"/> Uñas acrilicas</td></tr>                                                                                
-                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/pincel.png"/> Diseño de color</td><td class="spactd"><image src="imagenes/kera.png"/> Keratina</td></tr>
+                                                                                <tr class="spac"><td class="spactd "><image src="imagenes/tije.png"/> Corte</td><td class="spactd"><image src="imagenes/lip.png"/> Maquillaje</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/seca.png"/> Peinado</td><td class="spactd"><image src="imagenes/piess.png"/> Pedicure</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/polishs.png"/> Polish</td><td class="spactd"><image src="imagenes/unas.png"/> Uñas acrilicas</td></tr>                                                                                
+                                                                                <tr class="spac"><td class="spactd"><image src="imagenes/paleta.png"/> Diseño de color</td><td class="spactd"><image src="imagenes/hair.png"/> Keratina</td></tr>
                                                                             </table>
 								</div>
 
