edicion de imagenes principales, fue sabado en casa de maggie

--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
     </div>
                     <div class="glide__wrapper" >
                         <ul class="glide__track">
-                            <li class="glide__slide"><img src="imagenes/1.png" /></li>
-                                                <li class="glide__slide"><img src="imagenes/1.png" /></li>
-                                                <li class="glide__slide"><img src="imagenes/1.png" /></li>
-                                                <li class="glide__slide"><img src="imagenes/1.png" /></li>
+                            <li class="glide__slide"><img src="imagenes/unasRojo.jpg" /></li>
+                            <li class="glide__slide"><img src="imagenes/polishRojo.jpg" /></li>
+                            <li class="glide__slide"><img src="imagenes/pedicureRojo.jpg" /></li>                            
+                            <li class="glide__slide"><img src="imagenes/maquillajeRojo.jpg" /></li>
+                            <li class="glide__slide"><img src="imagenes/peinadoRojo.jpg" /></li>
+                            <li class="glide__slide"><img src="imagenes/colorRojo.jpg" /></li>
+                            <li class="glide__slide"><img src="imagenes/corteRojo.jpg" /></li>
                                             </ul>
                                     </div>
                     <div class="glide__bullets"></div>
@@ -240,7 +243,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>Margarita Texón López.</li>
+							<li>Margarita Texon López.</li>
 						</ul>
 					</div>
 				</div>
